responsividade do titulo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="image/nuvem-4.png">
             </i>
 
-            <h1>Estimativas da idade da Terra, <br> Lei do Resfiramento e a Teoria da Evolução</h1>
+            <h1>Estimativas da idade da Terra, Lei do Resfiramento e a Teoria da Evolução</h1>
 
             <i id="termometro"></i>
         </header>
